--- a/package.json
+++ b/package.json
@@ -1,37 +1,62 @@
 {
-  "name": "nodebb-plugin-composer-default",
-  "version": "6.4.7",
-  "description": "Default composer for NodeBB",
-  "main": "library.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/NodeBB/nodebb-plugin-composer-default"
+  "_from": "nodebb-plugin-composer-default@6.4.7",
+  "_id": "nodebb-plugin-composer-default@6.4.7",
+  "_inBundle": false,
+  "_integrity": "sha512-S75k1FOqpVq+sLTwk+2DuoOsCvIwdOjahcGZQ1w0gGuqQGEzYhEeEkbW83FTBUOQdnJkd5+eL/xEuP22sB9xKQ==",
+  "_location": "/nodebb-plugin-composer-default",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "nodebb-plugin-composer-default@6.4.7",
+    "name": "nodebb-plugin-composer-default",
+    "escapedName": "nodebb-plugin-composer-default",
+    "rawSpec": "6.4.7",
+    "saveSpec": null,
+    "fetchSpec": "6.4.7"
   },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/nodebb-plugin-composer-default/-/nodebb-plugin-composer-default-6.4.7.tgz",
+  "_shasum": "3dc8a5e8ef095eec6098a6b8905083fbeefbed8b",
+  "_spec": "nodebb-plugin-composer-default@6.4.7",
+  "_where": "C:\\Users\\Lenovo\\Work\\Projects\\corepunk",
+  "author": {
+    "name": "NodeBB Team",
+    "email": "sales@nodebb.org"
+  },
+  "bugs": {
+    "url": "https://github.com/NodeBB/nodebb-plugin-composer-default/issues"
+  },
+  "bundleDependencies": false,
+  "dependencies": {
+    "screenfull": "^4.0.0",
+    "validator": "^13.1.17"
+  },
+  "deprecated": false,
+  "description": "Default composer for NodeBB",
+  "devDependencies": {
+    "eslint": "7.10.0",
+    "eslint-config-airbnb-base": "14.2.0",
+    "eslint-plugin-import": "2.21.1"
+  },
+  "homepage": "https://github.com/NodeBB/nodebb-plugin-composer-default#readme",
   "keywords": [
     "nodebb",
     "plugin",
     "composer",
     "markdown"
   ],
-  "author": {
-    "name": "NodeBB Team",
-    "email": "sales@nodebb.org"
-  },
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/NodeBB/nodebb-plugin-composer-default/issues"
-  },
-  "readmeFilename": "README.md",
+  "main": "library.js",
+  "name": "nodebb-plugin-composer-default",
   "nbbpm": {
     "compatibility": "^1.14.3"
   },
-  "dependencies": {
-    "screenfull": "^4.0.0",
-    "validator": "^13.1.17"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/NodeBB/nodebb-plugin-composer-default.git"
   },
-  "devDependencies": {
-    "eslint": "7.10.0",
-    "eslint-config-airbnb-base": "14.2.0",
-    "eslint-plugin-import": "2.21.1"
-  }
+  "version": "6.4.7"
 }
